[package]
name = "undetected-chromedriver"
version = "1.1.0"
edition = "2021"
description = "An undetected implementation of thirtyfour."
repository = "https://github.com/Ulyssedev/Rust-undetected-chromedriver"
license = "MIT"
readme = "README.md"

[dependencies]
async-trait = "0.1.74"
rand = "0.8.5"
reqwest = "0.12.5"
serde_json = "1.0.105"
thirtyfour = "0.33.0"
tokio = "1.28.2"
zip = "2.1.6"
url = "2.5.0"
